manifests/apps/lars-media-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lars-media-app
  namespace: lars-media-app
  annotations:
    configmap.reloader.stakater.com/reload: config
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lars-media-app
  template:
    metadata:
      labels:
        app: lars-media-app
    spec:
      containers:
        - name: media-app
          image: ghcr.io/kubeside/images/media-app@sha256:d0271f6ff22bdec1cf7114956b4f606b7f75fa70836d3bfdc7524c3356dc9409
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /var/www/html/config.json
              subPath: config.json
              readOnly: true
            - name: static
              mountPath: /var/www/html/static 
              readOnly: false
      volumes:
        - name: config
          configMap:
            name: config
            items:
              - key: config.json
                path: config.json
        - name: static
          persistentVolumeClaim:
            claimName: assets
