manifests/apps/lars-media-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lars-media-app
  namespace: lars-media-app
spec:
  selector:
    app: lars-media-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
